--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>Browser Game</title>
 </head>
-<body>
+<body class = "outline">
     <div id = "game"> 
         <div id = "character"></div>
         <div id = "block"></div>
