--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <title>Browser Game</title>
 </head>
 <body class = "outline">
-    <div id = "game"> 
-        <div id = "character"></div>
-        <div id = "block"></div>
+    
+    <div class = "game"> 
+        <div class = "character"></div>
+        
     </div>
 </body>
 <script src="script.js"></script>
-</html>
+</html>  
