--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class = "game"> 
         <div class = "character"></div>
-        
+        <div class = "block"></div>
     </div>
 </body>
 <script src="script.js"></script>
