--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     
     <title>Browser Game</title>
 </head>
+
 <body class = "outline">
-    
+   
     <div class = "game"> 
+        <canvas id="mycanvas"></canvas>
         <div class = "character"></div>
-        <div class = "block"></div>
     </div>
+    <h2 id="prompt"></h2>
 </body>
 <script src="script.js"></script>
 </html>  
