--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
   <!--Check if dead prompt-->
     <h2 id="prompt"></h2>
 </body>
-<script src="script.js"></script>
+<script src="script.js" type="text"></script>
 </html>  
