--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body class = "outline">
     <!--Background image-->
-    <video id ="background-video" autoplay muted  loop><source src="../assets/cloud.mp4" type ="video/mp4"></video>
+    <video id ="background-video" autoplay muted  loop><source src="./assets/cloud.mp4" type ="video/mp4"></video>
     <!--Audio for Character Jump-->
-    <audio id = "audio" src="../assets/teleport.mp4"></audio>
+    <audio id = "audio" src="./assets/teleport.mp4"></audio>
     <!--div for js-->
     <div class = "game"> 
         <!--current score and high score js-->
         <div id ="score"></div>
         <!--start screen prompt and image-->
-        <div class ="start-screen">Press Spacebar to Jump!!<h2 class = "watch-your-step"><img src="../assets/icons8-watch-your-step-100.png"alt="watch your step"></h2></div>
+        <div class ="start-screen">Press Spacebar to Jump!!<h2 class = "watch-your-step"><img src="./assets/watchyourstep.png"alt="watch your step"></h2></div>
    
         <!--game character-->
         <div class = "character"><img src= "assets/bird.png" alt="bird"></div>
